src/objects/ChargeGroupCoverage__c.object
<CustomObject>
    <description>Junction object to create many-to-many relationship between Charge Groups and Coverages</description>
    <fields>
        <fullName>Charge_Group_Coverage_ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charge_Group__c</fullName>
        <label>Charge Group</label>
        <referenceTo>Charge_Group__c</referenceTo>
        <relationshipLabel>Charge Group Coverage Junctions</relationshipLabel>
        <relationshipName>Charge_Group_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <referenceTo>Coverage__c</referenceTo>
        <relationshipLabel>Charge Group Coverage Junctions</relationshipLabel>
        <relationshipName>Charge_Group_Coverages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <formula>IF(Coverage__r.Name &lt;&gt; &quot;SelfPay&quot;, &quot;Residual&quot;, &quot;SelfPay&quot;)</formula>
        <label>Insured?</label>
        <type>Text</type>
    </fields>
    <label>Charge Group Coverage Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Group Coverage Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>